--- a/options.html
+++ b/options.html
@@ -71,7 +71,7 @@ input:checked + .slider:before {
 </head>
 <body>
 
-<h2>Whether to Auto Preview Swagger json</h2>
+<h2>Whether to Preview Swagger JSON Automatically</h2>
 
 <!--
 
